# wechat-pharser

./: .gitignore  README.md  config.example.json  pyproject.toml
docs/superpowers/plans/: 2026-05-29-qun-alpha-core-pipeline.md  2026-05-29-qun-alpha-decrypt-guide.md  2026-05-29-qun-alpha-import-adapter.md  2026-05-29-qun-alpha-installer.md  2026-05-29-qun-alpha-job-engine.md  2026-05-29-qun-alpha-model-backend.md  2026-05-29-qun-alpha-notion-completion.md  2026-05-29-qun-alpha-onboarding-ui.md  2026-05-29-qun-alpha-scale-handling.md  2026-05-29-qun-alpha-ui-decrypt-launch.md  2026-05-29-qun-alpha-web-groups.md  (+3 more)
install/: install.sh
landing/: README.md  index.html
qun_alpha/: aggregator.py  chat_reader.py  cli.py  config.py  cursor_store.py  decrypt_service.py  doctor.py  estimate.py  extractor.py  job_store.py  jobs.py  models.py  notion_writer.py  orchestrator.py  processed_store.py  report.py  runners.py  web.py  wechat_import.py
qun_alpha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qun_alpha/native/: find_keys_codec.c
qun_alpha/static/: index.html
tests/: test_aggregator.py  test_chat_reader.py  test_cli_model.py  test_cli_smoke.py  test_config.py  test_cursor_store.py  test_decrypt_service.py  test_doctor.py  test_estimate.py  test_extractor.py  test_install_sh.py  test_job_store.py  test_jobs.py  test_landing.py  test_models.py  test_notion_writer.py  test_orchestrator.py  test_processed_store.py  test_report.py  test_runners.py  test_web.py  test_wechat_import.py
tests/fixtures/: export_sample.json
(+12 files in other folders)
